--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!-- Header section with profile information -->
     <header>
-        <img src="profile.jpg" class="profile-photo" loading="lazy">
+        <img src="logo.jpg" class="profile-photo" loading="lazy">
         <h1 class="glitch">
             Ayush Madavi
             <span class="glitch-effect" aria-hidden="true"></span>
